# beyond-rest-grpc

./: .gitignore  LICENSE  README.md  generate-protoc.sh
animal-server/: app.py  catAnalysis_pb2.py  catAnalysis_pb2_grpc.py  cat_analysis_client.py  cat_client.py  cat_pb2.py  cat_pb2_grpc.py  dog_client.py  requirements.txt
animal-server/generated_proto/: cat_pb2.py  cat_pb2_grpc.py  dog_pb2.py  dog_pb2_grpc.py
golang-cat-analysis-microservice/: go.mod  go.sum  main.go
golang-cat-analysis-microservice/client/: client.go
golang-cat-analysis-microservice/proto/: cat.pb.go  catAnalysis.pb.go
golang-cat-analysis-microservice/server/: server.go
golang-cat-microservice/: go.mod  go.sum  main.go  server.go
golang-cat-microservice/client/: client.go
golang-cat-microservice/proto/: cat.pb.go  owner.pb.go
golang-cat-microservice/server/: server.go
proto/: cat.proto  catAnalysis.proto  dog.proto  owner.proto
python-dog-microservice/: app.py  owner_client.py  owner_pb2_grpc.py  requirements.txt
python-dog-microservice/server/: __init__.py  app.py  dog_grpc.py  owner_client.py
rust-owner-microservice/: Cargo.toml  build.rs
rust-owner-microservice/src/: server.rs
