[package]
name = "rust-owner-microservice"
version = "0.1.0"
authors = ["mahmoudsalem <mahmoud.salem@halan.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6.1"
tonic = {version="0.2.0",features = ["tls"]}
tokio = {version="0.2.18",features = ["stream", "macros"]}
futures = "0.3"

[build-dependencies]
tonic-build = "0.2.0"

# server binary
[[bin]]
    name = "server"
    path = "src/server.rs"
